# RemoteController

./: .gitignore  LICENSE  Readme.md
client/: Agent.cpp  Agent.h  AgentClient.cpp  AgentClient.h  Application.cpp  Application.h  CMakeLists.txt  Controller.cpp  Controller.h  ControllerClient.cpp  ControllerClient.h  ControllerWnd.cpp  ControllerWnd.h  Logger.cpp  Logger.h  MatchClient.cpp  MatchClient.h  MatchWnd.cpp  MatchWnd.h  RtcClient.cpp  RtcClient.h  XControl.cpp  XControl.h  main.cpp  stdafx.h
match_server/: CMakeLists.txt  Server.cpp  Server.h  Session.cpp  Session.h  main.cpp  stdafx.h
proto/: gen_proto.sh  p2p.proto  signalling.proto
